--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -3,5 +3,5 @@
 {% endblock%}
 {% block content %}
     <h1> Hello Webpack </h1>
-    <h1> {{ joke }}</h1>
+    <h1> {{ joke }}</h1>y
 {% endblock %}
