--- a/src/views/partials/nav.njk
+++ b/src/views/partials/nav.njk
@@ -2,5 +2,5 @@
     <li><a href="/">Home</a></li>
     <li><a href="/about.html">about</a></li>
     <li><a href="/gallery.html">gallery</a></li>
-    <li><a href="/contacts.html">contacts2</a></li>
+    <li><a href="/contacts.html">contacts</a></li>
 </ul>
